examples/test/testpolicy18860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18860
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key19: value24
      key42: value44
      key31: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value43
      podSelector:
        matchLabels:
          key41: value34
